--- a/customerShowProduct.html
+++ b/customerShowProduct.html
@@ -369,96 +369,55 @@
           <!-- CONTENT -->
           <div class="col-lg-9 col-md-12 pb-5" style="height: 100vh;position: fixed;right: 0;overflow-y: scroll;">
             <div class="row">
-              <!-- BANNERS -->
-              <div class="col-12">
-                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                  <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <div class="col-md-6 p-4">
+
+                <div class="tab-content" id="pills-tabContent">
+                  <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
+                    <img src="./public/frontend/images/products/product1.jpg" class="card-img-top rounded" alt="..." style="">
                   </div>
-                  <div class="carousel-inner py-3">
-                    <div class="carousel-item active" style="height: 60vh;">
-                      <img src="./public/frontend/images/banners/banner1.jpg" class="w-100 h-100 rounded" alt="...">
-                    </div>
-                    <div class="carousel-item" style="height: 60vh;">
-                      <img src="./public/frontend/images/banners/banner2.jpg" class="w-100 h-100 rounded" alt="...">
-                    </div>
-                    <div class="carousel-item" style="height: 60vh;">
-                      <img src="./public/frontend/images/banners/banner3.jpg" class="w-100 h-100 rounded" alt="...">
-                    </div>
+                  <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">
+                    <img src="./public/frontend/images/products/product2.jpg" class="card-img-top rounded" alt="..." style="">
                   </div>
-  
-                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                  </button>
-                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                  </button>
-  
+                  <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab" tabindex="0">
+                    <img src="./public/frontend/images/products/product3.jpg" class="card-img-top rounded" alt="..." style="">
+                  </div>
                 </div>
+                <ul class="nav nav-pills mb-3 mt-2" id="pills-tab" role="tablist">
+                  <li class="nav-item" role="presentation">
+                    <button class="nav-link p-1 active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">
+                      <img src="./public/frontend/images/products/product1.jpg" class="card-img-top rounded" alt="..." style="width:50px;height:50px;">
+                    </button>
+                  </li>
+                  <li class="nav-item" role="presentation">
+                    <button class="nav-link p-1" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">
+                      <img src="./public/frontend/images/products/product2.jpg" class="card-img-top rounded" alt="..." style="width:50px;height:50px;">
+                    </button>
+                  </li>
+                  <li class="nav-item" role="presentation">
+                    <button class="nav-link p-1" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">
+                      <img src="./public/frontend/images/products/product3.jpg" class="card-img-top rounded" alt="..." style="width:50px;height:50px;">
+                    </button>
+                  </li>
+                </ul>
+
+                
               </div>
-              <!-- BRANDS -->
-              <div class="col-12 pb-3">
-                <h3 class="text-center">Brands</h3>
-                <div class="row">
-                  <div class="col-12">
-                    <div class="owl-carousel owl-theme mb-5">
-
-                      <div class="item">
-                        <a href="" class="nav-link-2">
-                            <div class="p-2 text-center justify-content-center">
-                              <img src="./public/frontend/images/brands/brand.jpg" class="rounded-circle">
-                              <div class="card-body">
-                                <p class="text-uppercase fw-bold">brand 1</p>
-                              </div>
-                            </div>
-                        </a>
-                      </div>
-
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- PRODUCTS -->
-              <div class="col-12 pb-5">
-                <h3>Just For you</h3>
-                <div class="row">
-
-                  <div class="col-6 col-md-3 p-2">
-                    <a href="./customerShowProduct.html" class="nav-link-2">
-                      <div class="card" style="">
-                        <img src="./public/frontend/images/products/product.jpg" class="card-img-top" alt="..." style="">
-                        <div class="card-body py-2">
-                          <h6 class="card-title my-0">Card title</h6>
-                          <p class="card-text my-0 mb-2">40000</p>
-                          <div class="row justify-content-between">
-                            <div class="col text-center">
-                              <span class="myTooltips"
-                              data-bs-custom-class="tooltip-color" data-bs-placement="top" title="Add To Cart">
-                                <a href="#" class="btn btn-outline-primary px-2 py-0">
-                                  <i class="bi bi-cart-plus-fill fs-3"></i>
-                                </a>
-                              </span>
-                            </div>
-                            <div class="col text-center">
-                              <span class="myTooltips"
-                              data-bs-custom-class="tooltip-color" data-bs-placement="top" title="Shop Now">
-                                <a href="#" class="btn btn-outline-success px-2 py-0">
-                                  <i class="bi bi-cart-check-fill fs-3"></i>
-                                </a>
-                              </span>
-                            </div>
-                          </div>
-
-                        </div>
-                      </div>
-                    </a>
-                  </div>
-
-                </div>
+              <div class="col-md-6 p-4">
+                <h4>Card title</h4>
+                <h6>Brand : Brand 1</h6>
+                <p>40000 <span>&#2547;</span> </p>
+                <span class="myTooltips"
+                data-bs-custom-class="tooltip-color" data-bs-placement="top" title="Add To Cart">
+                  <a href="#" class="btn btn-outline-primary px-2 py-0">
+                    <i class="bi bi-cart-plus-fill fs-3"></i>
+                  </a>
+                </span>
+                <span class="myTooltips"
+                data-bs-custom-class="tooltip-color" data-bs-placement="top" title="Shop Now">
+                  <a href="#" class="btn btn-outline-success px-2 py-0">
+                    <i class="bi bi-cart-check-fill fs-3"></i>
+                  </a>
+                </span>
               </div>
             </div>
           </div>
